--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "d3": "^5.7.0",
+    "formsy-react": "^1.1.5",
+    "formsy-semantic-ui-react": "^0.3.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
