--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "agogos-front-end",
+  "name": "ringleadr-front-end",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "d3": "^5.7.0",
-    "formsy-react": "^1.1.5",
-    "formsy-semantic-ui-react": "^0.3.3",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "react-vis": "^1.11.6",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.84.0"
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "d3": "^7.8.2",
+    "formsy-react": "^2.3.0",
+    "formsy-semantic-ui-react": "^2.2.4",
+    "npm-check-updates": "^16.7.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
+    "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
+    "test": "echo 'NOT IMPLEMENTED'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,5 +33,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.1.2",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.5"
+  }
 }
